fixed margin-top causing footer to be misaligned

--- a/src/components/dailyForecast/style.less
+++ b/src/components/dailyForecast/style.less
@@ -4,7 +4,7 @@
 	color: black;
 	text-align: left;
 	margin: 0 auto;
-	margin-top: -10px;
+	margin-top: -25px;
 	margin-bottom: 60px;
 	word-spacing: 20px;
 	font-size: 1.1em;
@@ -15,7 +15,7 @@
 	color: black;
 	text-align: center;
 	margin: 0 auto;
-	margin-top: -10px;
+	margin-top: -25px;
 	margin-bottom: 60px;
 	word-spacing: 20px;
 	font-size: 1.1em;
